feat(notification): add user config plugin API
